tests-e2e/tests/snapshots/cli__config_unknown_source_kind_inline.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · --config:1:20
  •
  │
  • unknown variant `unknown`, expected `spago` or `command`
  │
  │   {"sources":{"kind":"unknown"}}
  │                      ╰────────
  •
