tests-e2e/tests/snapshots/cli__config_wrong_diagnostic_object_file.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · config/settings.json:1:25
  •
  │
  • invalid type: map, expected a boolean
  │
  │   {"diagnostics":{"onSave":{}}}
  │                           ╰
  •
