tests-e2e/tests/snapshots/cli__config_wrong_top_level_file.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · config/settings.json:1:1
  •
  │
  • invalid type: boolean `false`, expected struct ConfigurationSettings
  │
  │   false
  │   ╰────
  •
