tests-e2e/tests/snapshots/cli__config_wrong_top_level_inline.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · --config:1:1
  •
  │
  • invalid type: boolean `false`, expected struct ConfigurationSettings
  │
  │   false
  │   ╰────
  •
