tests-e2e/tests/snapshots/cli__docs_project_requires_value.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [missing_flag_value] · command line:1:11
  •
  │
  • a value is required for '--spago-project <DIR>' but none was supplied
  │
  │ For more information, try '--help'.
  │
  │   iris docs --spago-project
  │             ╰──────────────
  •
