tests-e2e/tests/snapshots/cli__docs_requires_package_or_project.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [missing_required] · command line:1:1
  •
  │
  • the following required arguments were not provided:
  │   --package
  │
  │ Usage: iris docs [FLAGS] [SUBCOMMAND]
  │
  │ For more information, try '--help'.
  │
  │   iris docs
  │   ╰────────
  •
