tests-e2e/tests/snapshots/cli__duplicate_build_scalar.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [duplicate_flag] · command line:1:1
  •
  │
  • the argument '--package' cannot be used multiple times
  │
  │ Usage: iris build [FLAGS]
  │
  │ For more information, try '--help'.
  │
  │   iris build --package one --package two
  │   ╰─────────────────────────────────────
  •
