tests-e2e/tests/snapshots/cli__duplicate_compile_scalar.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [duplicate_flag] · command line:1:1
  •
  │
  • the argument '--output' cannot be used multiple times
  │
  │ Usage: iris compile [FLAGS] [INPUT]…
  │
  │ For more information, try '--help'.
  │
  │   iris compile --output one --output two Main.purs
  │   ╰───────────────────────────────────────────────
  •
